ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/um/gcc/set-8/fuzzer-file-17329.log
fuzzer-file-17329-2022-08-01-06:42:48.c:8:45: error: expected ‘;’, ‘,’ or ‘)’ before ‘%’ token
    8 | __attribute__ ((noinline)) void f(long long %g, int p2) {
      |                                             ^
fuzzer-file-17329-2022-08-01-06:42:48.c: In function ‘fn2’:
fuzzer-file-17329-2022-08-01-06:42:48.c:15:13: error: ‘b’ undeclared (first use in this function)
   15 |       if (!(b)) {
      |             ^
fuzzer-file-17329-2022-08-01-06:42:48.c:15:13: note: each undeclared identifier is reported only once for each function it appears in
fuzzer-file-17329-2022-08-01-06:42:48.c: At top level:
fuzzer-file-17329-2022-08-01-06:42:48.c:27:1: error: expected identifier or ‘(’ before ‘break’
   27 | break;
      | ^~~~~
fuzzer-file-17329-2022-08-01-06:42:48.c:32:7: error: ‘j’ undeclared here (not in a function)
   32 |     c[j] = 2075593088;
      |       ^
fuzzer-file-17329-2022-08-01-06:42:48.c:33:5: error: expected identifier or ‘(’ before ‘}’ token
   33 |     }
      |     ^
fuzzer-file-17329-2022-08-01-06:42:48.c:34:3: error: conflicting types for ‘fn2’; have ‘int()’
   34 |   fn2();
      |   ^~~
fuzzer-file-17329-2022-08-01-06:42:48.c:12:33: note: previous definition of ‘fn2’ with type ‘void()’
   12 | __attribute__ ((noinline)) void fn2() {
      |                                 ^~~
fuzzer-file-17329-2022-08-01-06:42:48.c:35:5: error: expected declaration specifiers or ‘...’ before ‘&’ token
   35 |   f(&a, e);
      |     ^
fuzzer-file-17329-2022-08-01-06:42:48.c:35:9: error: expected declaration specifiers or ‘...’ before ‘e’
   35 |   f(&a, e);
      |         ^
fuzzer-file-17329-2022-08-01-06:42:48.c:36:3: error: expected identifier or ‘(’ before ‘if’
   36 |   if (a)
      |   ^~
fuzzer-file-17329-2022-08-01-06:42:48.c:38:3: error: expected identifier or ‘(’ before ‘return’
   38 |   return 0;
      |   ^~~~~~
fuzzer-file-17329-2022-08-01-06:42:48.c:39:1: error: expected identifier or ‘(’ before ‘}’ token
   39 | }
      | ^
fuzzer-file-17329-2022-08-01-06:42:48.c: In function ‘fn2’:
fuzzer-file-17329-2022-08-01-06:42:48.c:23:12: internal compiler error: tree check: expected array_type, have error_mark in array_ref_low_bound, at tree.cc:12479
   23 |       e = c[0];
      |           ~^~~
0x7e3fd0 tree_check_failed(tree_node const*, char const*, int, char const*, ...)
	.././../gcc-source/gcc/tree.cc:8688
0x7edb6d tree_check(tree_node*, char const*, int, char const*, tree_code)
	.././../gcc-source/gcc/tree.h:3450
0x7edb6d array_ref_low_bound(tree_node*)
	.././../gcc-source/gcc/tree.cc:12479
0xc310ef gimplify_compound_lval
	.././../gcc-source/gcc/gimplify.cc:3204
0xc2a904 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15008
0xc3bae7 gimplify_modify_expr
	.././../gcc-source/gcc/gimplify.cc:6043
0xc2b126 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15056
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2efb4 gimplify_bind_expr
	.././../gcc-source/gcc/gimplify.cc:1428
0xc2b891 gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15257
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
0xc2b8eb gimplify_statement_list
	.././../gcc-source/gcc/gimplify.cc:2019
0xc2b8eb gimplify_expr(tree_node**, gimple**, gimple**, bool (*)(tree_node*), int)
	.././../gcc-source/gcc/gimplify.cc:15501
0xc2e7f6 gimplify_stmt(tree_node**, gimple**)
	.././../gcc-source/gcc/gimplify.cc:7111
Please submit a full bug report, with preprocessed source (by using -freport-bug).
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
